--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Car Tube</title>
-    <link rel="stylesheet" href="/style/styles.css">
-    <script src="/src/app.js" type="module"></script>
+    <link rel="stylesheet" href="./style/styles.css">
+    <script src="./src/app.js" type="module"></script>
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
